--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,17 +1,39 @@
-name: CI
-
+name: Continuous Integration
 on:
   push:
-    # Specify the branch that will trigger the workflow
-    branches: [ "myfeature" ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
+  
+permissions: write-all
 
 jobs:
-  # Write name of the job as a key
-  hello-from-runner:
-    # Specify the runner machine
+  build:
     runs-on: ubuntu-latest
     steps:
-      # Write the step name
-      - name: Print Name
-        run: |
-          echo "Hello from $(whoami)"
+      # Step 1: Check out the code
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      
+      # Step 2: Set up CML
+      - name: Set Up CML
+        uses: iterative/setup-cml@v2
+      
+      # Step 3: Install Dependencies
+      - name: Install Packages
+        run: make install
+      
+      # Step 4: Code Formatting
+      - name: Format Code
+        run: make format
+      
+      # Step 5: Train the Model
+      - name: Train Model
+        run: make train
+
+      # Step 6: Evaluation
+      - name: Evaluate Model
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: make eval
