--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Train Model
         env:
           RAW_DATA_DIR: "./CI_CD/Data/drug200.csv"
-        run: python data_processing.py $RAW_DATA_DIR
+        run: python train.py $RAW_DATA_DIR
 
 
       # Step 6: Evaluation
