--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,8 +33,8 @@ jobs:
       # Step 5: Train the Model
       - name: Train Model
         env:
-          RAW_DATA_DIR: "./CI_CD/Data/drug200.csv"
-        run: python train.py $RAW_DATA_DIR
+#          RAW_DATA_DIR: "./CI_CD/Data/drug200.csv"
+        run: python train.py #$RAW_DATA_DIR
 
 
       # Step 6: Evaluation
