--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,6 +37,7 @@ jobs:
 
       # Step 6: Evaluation
       - name: Evaluate Model
-        env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: make eval
+      env:
+        REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for CML
+      run: |
+        make eval
