--- a/.github/workflows/CI_new.yml
+++ b/.github/workflows/CI_new.yml
@@ -1,1 +1,7 @@
 
+      # Step 6: Evaluation
+      - name: Evaluate Model
+      env:
+        REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for CML
+      run: |
+        make eval
