--- a/.github/workflows/CI_new.yml
+++ b/.github/workflows/CI_new.yml
@@ -33,3 +33,12 @@ jobs:
       # Step 5: Train the Model
       - name: Train Model
         run: python train.py
+      - name: Evaluation
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: make eval
+      - name: Update Branch
+        env:
+          NAME: ${{ secrets.USER_NAME }}
+          EMAIL: ${{ secrets.USER_EMAIL }}
+        run: make update-branch USER_NAME=$NAME USER_EMAIL=$EMAIL
