--- a/.github/workflows/CI_new.yml
+++ b/.github/workflows/CI_new.yml
@@ -34,22 +34,45 @@ jobs:
       - name: Train Model
         run: python train.py 
 
+____________________________________________________________
+
+name: Continuous Integration
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
+  
+permissions: write-all
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      # Step 1: Check out the code
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      
+      # Step 2: Set up CML
+      - name: Set Up CML
+        uses: iterative/setup-cml@v2
+      
+      # Step 3: Install Dependencies
+      - name: Install Packages
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      # Step 4: Code Formatting
+      - name: Format Code
+        run: black *.py
+      
+      # Step 5: Train the Model
+      - name: Train Model
+        run: python train.py 
 
 
 
 
 
-
-
-
-
-
-
-
-
-      # Step 6: Evaluation
-      - name: Evaluate Model
-      env:
-        REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for CML
-      run: |
-        make eval
