--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,4 +43,4 @@ jobs:
         env:
           NAME: ${{ secrets.USER_NAME }}
           EMAIL: ${{ secrets.USER_EMAIL }}
-        run: make update-branch USER_NAME=$NAME USER_EMAIL=$EMAIL
+        run: echo "$Greeting $USER_NAME. Today is $USER_EMAIL!"
